syntax = "proto3";

option go_package = "./pbauth";

package auth;


service Auth {
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
}

message AuthenticateRequest {
  string jwt = 1;
}

message AuthenticateResponse {
  uint64 user_id = 1;
}

